# misaki-rs

./: .gitignore  Cargo.toml  README.md  data_test.txt  expand_dicts.py
data/: gb_gold.json  us_gold.json
examples/: test_stress_fix.rs  test_words.rs
src/: data.rs  fallback.rs  g2p.rs  language.rs  lexicon.rs  lib.rs  tagger.rs  token.rs
src/languages/: english.rs  mod.rs
