[package]
name = "misaki-rs"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "A self-contained, POS-aware Grapheme-to-Phoneme (G2P) engine for Rust, optimized for TTS models like Kokoro."
homepage = "https://github.com/MicheleYin/misaki-rs"
repository = "https://github.com/MicheleYin/misaki-rs"
readme = "README.md"

[dependencies]
regex = "1.10"
num2words = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fancy-regex = "0.13"
language-tokenizer = { version = "0.1", features = ["snowball"] }
